# Percepta_Reactive_Siem

./: .gitignore  .task_complete_marker  Cargo.toml  Makefile  README.md  build.rs  demo.sh  docker-compose.yml  launch.json  package-lock.json  settings.json  stop_demo.sh
.cargo/: audit.toml
.codacy/: codacy.yaml
agent/: Cargo.toml  build.rs
agent/src/: client.rs  collector.rs  config_store.rs  dedup.rs  embedded_assets.rs  files.rs  gui_common.rs  gui_linux.rs  gui_windows.rs  health_http.rs  identity.rs  ids_suricata.rs  lan_snapshot.rs  lib.rs  linux_logs.rs  main.rs  response_channel.rs  sensors.rs  system_info.rs  tls.rs  tray_app.rs  windows_eventlog.rs  windows_service.rs
agent/tests/: integration.rs
certs/: ca_cert.pem
deploy/: .env.deploy  deploy.sh  percepta-server.service  push.sh  setup-nginx.sh
deploy/bundle/: nginx-common_1.26.3-3+deb13u2_all.deb  nginx_1.26.3-3+deb13u2_amd64.deb
docs/: PERCEPTA_COMPETITIVE_COMPARISON.html
docs/final-year-report/: build-report.sh
docs/final-year-report/diagrams/: architecture-overview.dot  deployment-topology.dot  enrollment-workflow.dot  ingestion-pipeline.dot  response-workflow.dot
ids/suricata/: install_suricata.sh  run_suricata.sh
ids/suricata/rules/: exceptions.rules  percepta.rules
server/: Cargo.toml  build.rs  event_knowledge.json  parsers.yaml  rules.yaml  siem_dashboard.html
server/Logo/: logo-64.b64
server/compliance_mappings/: iso_27001_2022.yaml  nist_csf.yaml  pci_dss_4.yaml  soc2.yaml
server/config/: apis.example.toml  honeypot_low_resource_no_docker.env  sigma_quality_linux_windows.env
server/dashboard/: dbadmin.html  index.html
server/dashboard/css/: branding.css  components.css  overview.css  panes.css  theme.css
server/dashboard/html/: body.html
server/dashboard/js/: alert-details.js  api.js  assets.js  cases.js  charts.js  compliance.js  components.js  data.js  details.js  detection-coverage.js  dlp.js  early-guards.js  i18n.js  init.js  integrations.js  ioc.js  mitre.js  overview.js  paint-tables.js  panes-extra.js  playbook-builder.js  rbac.js  reports.js  saved-searches.js  settings.js  soc-tools.js  state.js  tenants.js  ui-controls.js  utils.js  vulnerabilities.js  webhooks.js
server/src/: admin.rs  agent_identity.rs  agent_ordinal_api.rs  agent_ordinal_registry.rs  alerts.rs  api_docs.rs  api_response.rs  asset_management.rs  audit_log.rs  auth.rs  collector.rs  cve_enrichment.rs  db.rs  db_admin_api.rs  decoder_engine.rs  device_registry.rs  device_registry_api.rs  dlp.rs  dr.rs  enrichment.rs  enroll.rs  enrollment.rs  events.rs  geoip.rs  gui.rs  honeypot_api.rs  honeypot_traps.rs  ids_api.rs  ids_suppression.rs  ingest_utils.rs  integrations.rs  intel.rs  lan_api.rs  lan_topology.rs  lib.rs  local_net_scan.rs  main.rs  mtls_peer.rs  normalize.rs  notes_api.rs  (+25 more)
server/src/certificate_authority/: crl.rs  mod.rs  operations.rs  types.rs
server/testdata/windows_golden/: 1102_audit_log_cleared.yaml  4624_success_logon.yaml  4625_failed_logon.yaml  4688_process_create.yaml  4719_audit_policy_changed.yaml  4720_user_created.yaml  4722_user_enabled.yaml  4725_user_disabled.yaml  4728_group_member_added_global.yaml  4732_group_member_added_local.yaml  4738_user_changed.yaml  7045_service_installed.yaml
server/testdata/windows_sequences_golden/: seq_4719_then_1102.yaml  seq_4720_then_4722.yaml  seq_4720_then_4728_admins.yaml
server/tests/: integration_test.rs
shared/proto/: siem_core.proto
tools/: Cargo.toml  fake_agent.rs  install_geolite2_city_mmdb.sh  install_postgres_local.sh  make_windows_setup.sh  rules_lint.rs
