[workspace]
members = ["server", "agent", "tools"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Percepta Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/percepta/percepta-siem"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
